# rag-retriever

./: .gitignore  README.md  conftest.py  pyproject.toml
rag_retriever/: __init__.py
rag_retriever/modules/doc_store/: doc_store.py
rag_retriever/modules/doc_store/embedding/: localai_embeddings.py  utils.py
rag_retriever/modules/doc_store/kb_cache/: base.py  faiss_cache.py
rag_retriever/modules/doc_store/kb_service/: base.py  chromadb_kb_service.py  constants.py  default_kb_service.py  es_kb_service.py  faiss_kb_service.py  milvus_kb_service.py  pg_kb_service.py  relyt_kb_service.py  zilliz_kb_service.py
rag_retriever/modules/loaders/: __init__.py  loaders.py
rag_retriever/modules/loaders/custom_loaders/: __init__.py  doc_loader.py  filtered_csv_loader.py  html_loader.py  img_loader.py  pdf_loader.py  ppt_loader.py
rag_retriever/modules/rerank/: rerank.py
rag_retriever/modules/retriever/: retriever.py
rag_retriever/modules/retriever/custom_retriever/: __init__.py  base.py  ensemble.py  vectorstore.py
rag_retriever/modules/splitter/: splitter.py
rag_retriever/modules/splitter/custom_splitter/: __init__.py
rag_retriever/tests/: local_files.py
rag_retriever/tests/modules/: test_loaders.py  test_splitter.py
rag_retriever/utils/: utils.py
