[tool.poetry]
name = "rag-retriever"
version = "0.1.0"
description = ""
authors = ["libing <libing@healink.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.13"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
loguru = "^0.7.2"
tqdm = "^4.66.4"
pillow = "^10.3.0"
unstructured = {extras = ["all-docs"], version = "^0.14.8"}
rapidocr-onnxruntime = "^1.3.22"
pymupdf = "^1.24.6"
rapidocr-paddle = "^1.3.23"
beautifulsoup4 = "^4.12.3"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
